<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center"
       android:orientation="vertical"
       >
       <EditText
           android:id="@+id/serverip"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:hint="@string/serverip"
           android:gravity="center_horizontal"/>
       <EditText

           android:id="@+id/serverport"
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:hint="@string/serverport"
           android:gravity="center_horizontal"
           />
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
       <Button
           android:text="@string/login"
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:id="@+id/login"
           android:textSize="20dip"
           />

        <CheckBox
            android:text="@string/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/remember_pwd" />
       </LinearLayout>
   </LinearLayout>
     </RelativeLayout>
