<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
     <Button
        android:id="@+id/xinbiao_add_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/add_divice"
        android:textSize="30sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/xinbiao_delete_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/delete_divice"
         android:textSize="30sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
     <Button
        android:id="@+id/xinbiao_param_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/param_divice"
        android:textSize="30sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
    
    <Button
        android:id="@+id/xianbiao_about_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/about_divice"
         android:textSize="30sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />

</LinearLayout>
