<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
     <Button
        android:id="@+id/danbing_param_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/param_divice"
        android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
  
     <Button
        android:id="@+id/danbing_shock_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/shock_divice"
         android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
     <Button
        android:id="@+id/danbing_HoldOn_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/holdon_divice"
         android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
      <Button
        android:id="@+id/danbing_Model_divice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/model_divice"
         android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
</LinearLayout>
