<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/navigation"
        android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
     <Button
        android:id="@+id/guiji"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/guiji_divice"
        android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
  
    <Button
        android:id="@+id/genzong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/genzong_track"
         android:textSize="15sp"
        android:background="@drawable/button_menu_style"
        android:layout_weight="1"
        />
</LinearLayout>